fix an issue where beef info box was being clipped by the containing graph container

--- a/assets/css/beef.scss
+++ b/assets/css/beef.scss
@@ -928,7 +928,7 @@ div#page-container {
       max-width: 100rem;
       box-shadow: $box-shadow;
       border-radius: $border-radius;
-      overflow: auto;
+      display: grid;
 
       @media (max-width: 40rem) {
         box-shadow: none;
